# onednnl-sys

./: Cargo.toml  README.md  build.rs  wrapper.h  wrapper_cl_interop.h  wrapper_sycl_interop.h
.github/workflows/: ci-intel.yml
src/: bindings.rs  lib.rs  ocl.rs  sycl.rs
src/bindings/: bindings.rs  ocl_bindings.rs  sycl_bindings.rs
tests/: test_smoke.rs
